<resources>
    <string name="app_name">BabyLife</string>
    <string name="str_nul">暂无</string>
    <string name="str_add">新增</string>
    <string name="prince">小王子</string>
    <string name="prince_height">小王子\n身高</string>
    <string name="prince_weight">小王子\n体重</string>
    <string name="princess">小公主</string>
    <string name="princess_height">小公主\n身高</string>
    <string name="princess_weight">小公主\n体重</string>
    <string name="new_baby">添加小宝贝</string>
    <string name="please_input_name">请输入宝贝姓名</string>
    <string name="please_sel_birth">请选择出生日期</string>
    <string name="please_sel_measure_date">请选择测量日期</string>
    <string name="name">宝贝姓名</string>
    <string name="sex">宝贝性别</string>
    <string name="age">宝贝年龄</string>
    <string name="birth">出生日期</string>
    <string name="measure_date">测量日期</string>
    <string name="measure_date_1">测量日期：</string>
    <string name="day">天</string>
    <string name="add">添加</string>
    <string name="growth_curve">成长曲线</string>
    <string name="height_curve">身高变化曲线</string>
    <string name="weight_curve">体重变化曲线</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="recent_photo">近照</string>
    <string name="measure_date_f">测量日期：%s</string>

    <string name="has_add_baby">已添加的宝贝</string>
    <string name="grow_data_records">成长记录(长按可编辑/删除)</string>
    <string name="baby_detail">宝贝信息</string>
    <string name="please_input">请输入</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="backup_recovery">备份与恢复</string>
    <string name="backup">备份</string>
    <string name="backup_db">备份数据库</string>
    <string name="recovery">恢复</string>
    <string name="backup_path">备份路径:</string>
    <string name="not_backup">尚未备份</string>
    <string name="not_backup_db">尚未备份数据库</string>
    <string name="file_name">文件名:</string>
    <string name="file_size">文件大小:</string>
    <string name="rearing_baby">育儿</string>
    <string name="rearing_knowledge">育儿宝典</string>
    <string name="warning">警告</string>
    <string name="detail">详情</string>
    <string name="warning_restore_data">恢复备份将覆盖现有数据\n确定要恢复吗？</string>
    <string name="warning_backup_data">备份将覆盖覆盖之前备份的文件\n确定要备份吗？</string>
    <string name="warning_delete_data">确定要删除该条记录吗？</string>
    <string name="child_height_boy">儿童身高(cm)比照表（男）</string>
    <string name="child_height_girl">儿童身高(cm)比照表（女）</string>
    <string name="child_weight_boy">儿童体重(kg)比照表（男）</string>
    <string name="child_weight_girl">儿童体重(kg)比照表（女）</string>
    <string name="tips_age_desc_deviation">注：年龄描述可能会有误差</string>
    <string name="std_data_instruction">说明： “中位数”，表示处于人群的平均水平；如果在“-1sd~中位数~+1sd”即：中位数上下一个标准差范围之内，属于“正常范围”，代表了68%的儿童；如果在“（-2sd~-1sd）或者（+1sd~+2sd）”即：中位数上下两个标准差范围之内，则定义为“偏矮（高）”，代表了27.4%的儿童；如果在“（-3sd~-2sd）或者（+2sd~+3sd）”即：中位数上下三个标准差之内，则定义为“矮（高）”，代表了4.6%的儿童。极少儿童在三个标准差（&#60;-3sd>+3sd）之外（比例小于0.5%）。</string>

    <string name="bmi">身高体重指数(BMI)</string>
    <string name="bmi_btn">计算BMI的值</string>
    <string name="advice_heavy">你偏重</string>
    <string name="advice_light">你偏瘦</string>
    <string name="bmi_result">你的BMI的值是:%.2f</string>
    <string name="advice_average">很标准</string>

    <string name="sleep_time_chart">睡眠时间表</string>
    <string name="sleep_time_tips">说明：只要保持规律的睡眠作息和足够的睡眠时长就算不上熬夜。</string>

    <string name="common_loading">加载中...</string>
    <string name="please_wait">请稍后...</string>


</resources>
