<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddNewBabyActivity">

    <com.guc.babyslife.widget.ToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftType="finish"
        app:rightString="@string/backup"
        app:rightType="string"
        app:title="@string/new_baby" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <TextView
            style="@style/StyleCommonText.GrayDark"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_et"
            style="@style/EditTextStyle.WithoutBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:hint="@string/please_input_name"
            android:maxLength="5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <TextView
            style="@style/StyleCommonText.GrayDark"
            android:text="@string/sex" />

        <RadioGroup
            android:id="@+id/sex_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_prince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/prince" />

            <RadioButton
                android:id="@+id/rb_princess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/princess" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <TextView
            style="@style/StyleCommonText.GrayDark"
            android:text="@string/birth" />

        <TextView
            android:id="@+id/sel_birth_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:text="@string/please_sel_birth" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <TextView
            style="@style/StyleCommonText.GrayDark"
            android:text="@string/age" />

        <TextView
            android:id="@+id/sel_age_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:text="@string/please_sel_birth" />
    </LinearLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="@dimen/dimen_160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/dra_btn_prince"
        android:text="@string/add"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/has_add_baby" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_baby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>