<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GrowthCurveActivity">

    <com.guc.babyslife.widget.ToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:leftType="finish"
        app:title="@string/growth_curve" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20dp"
                android:background="@drawable/shape_item_bg"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dimen_10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_header_height"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/dimen_40dp"
                    android:paddingLeft="@dimen/dimen_20dp"
                    android:text="@string/height_curve"
                    android:textStyle="bold" />

                <com.guc.babyslife.widget.GCLineChart
                    android:id="@+id/lineChartHeight"
                    android:layout_width="match_parent"
                    android:layout_height="190dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:background="@drawable/shape_item_bg"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dimen_10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_header_weight"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/dimen_40dp"
                    android:paddingLeft="@dimen/dimen_20dp"
                    android:text="@string/weight_curve"
                    android:textStyle="bold" />

                <com.guc.babyslife.widget.GCLineChart
                    android:id="@+id/lineChartWeight"
                    android:layout_width="match_parent"
                    android:layout_height="190dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>